@@ -36,9 +36,7 @@ import org.apache.nifi.proxy.ProxySpec;
 
 import java.io.ByteArrayOutputStream;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 
@@ -67,16 +65,14 @@ public class PutAzureQueueStorage_v12 extends AbstractAzureQueueStorage_v12 {
             .build();
 
     private static final ProxySpec[] PROXY_SPECS = {ProxySpec.HTTP, ProxySpec.SOCKS};
-    private static final List<PropertyDescriptor> PROPERTIES = Collections.unmodifiableList(
-            Arrays.asList(
-                    QUEUE_NAME,
-                    ENDPOINT_SUFFIX,
-                    STORAGE_CREDENTIALS_SERVICE,
-                    MESSAGE_TIME_TO_LIVE,
-                    VISIBILITY_TIMEOUT,
-                    REQUEST_TIMEOUT,
-                    ProxyConfiguration.createProxyConfigPropertyDescriptor(false, PROXY_SPECS)
-            )
+    private static final List<PropertyDescriptor> PROPERTIES = List.of(
+            QUEUE_NAME,
+            ENDPOINT_SUFFIX,
+            STORAGE_CREDENTIALS_SERVICE,
+            MESSAGE_TIME_TO_LIVE,
+            VISIBILITY_TIMEOUT,
+            REQUEST_TIMEOUT,
+            ProxyConfiguration.createProxyConfigPropertyDescriptor(false, PROXY_SPECS)
     );
 
     // 7 days is the maximum timeout as per https://learn.microsoft.com/en-us/rest/api/storageservices/get-messages
